fix: toList()